--- a/scanline/scanline/scanline.vcxproj
+++ b/scanline/scanline/scanline.vcxproj
@@ -19,8 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{C00343AF-7D9E-4464-9D2C-9AC1C6E76F66}</ProjectGuid>
-    <RootNamespace>prespective</RootNamespace>
+    <ProjectGuid>{4506589F-C427-4738-A6EE-4161EDFC95B7}</ProjectGuid>
+    <RootNamespace>scanline</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -110,10 +110,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
